factura nueva muchos avances

--- a/src/app/components/factura/factura-nuevo/factura-nuevo.component.html
+++ b/src/app/components/factura/factura-nuevo/factura-nuevo.component.html
@@ -1,7 +1,7 @@
 <div class="animated fadeIn">
 
   <!-- Content Header (Page header) -->
-  <form (ngSubmit)="nuevaFactura()" #forma="ngForm" novalidate="">
+  <form (ngSubmit)="guardar(forma)" #forma="ngForm" novalidate="">
   <section class="content-header">
     <h1>Nueva Factura</h1>
   </section>
@@ -18,12 +18,12 @@
 
           <div class="box box-primary">
           <div class="box-header with-border">
-            <h3 class="box-title">Ingresar Datos</h3>
+            <!-- <h3 class="box-title">Ingresar Datos</h3> -->
 
-            <div class="col-md-4 mb-2 px-1 pull-right">
+            <div class="col-md-4 m-b-0 px-1 pull-left">
               <div class="row d-flex align-items-center">
                 <div class="col-md-4 mb-0 text-right">
-                  <span class="align-baseline">Nº Factura</span>
+                  <h5>Nº Factura</h5>
                 </div>
                 <div class="col-md-8 input-group">
                   <input  type="text"
@@ -31,6 +31,8 @@
                   placeholder="Suc"
                   name="nsuc"
                   [(ngModel)]="factura.nsuc"
+                  minlength="3"
+                  maxlength="3"
                   >
                   <input  type="text"
                   class="form-control w-25 text-center"
@@ -38,12 +40,19 @@
                   name="npe"
                   [(ngModel)]="factura.npe"
                   >
-                  <input  type="text"
-                  class="form-control w-50 text-center"
-                  placeholder="Factura"
-                  name="ncomp"
-                  [(ngModel)]="factura.ncomp"
-                  >
+                  <!-- <div class="form-control  is-invalid"> -->
+                  <!--  -->
+                    <input  type="text"
+                    class="form-control w-50 text-center"
+                    #ncomp="ngModel"
+                    [ngClass]="{ 'is-invalid': ncomp.errors?.required && ( ncomp.touched || forma.submitted )}"
+                    placeholder="Factura"
+                    name="ncomp"
+
+                    [(ngModel)]="factura.ncomp"
+                    required
+                    >
+                  <!-- </div> -->
                 </div>
               </div>
             </div>
@@ -57,7 +66,7 @@
 
                     <div class="form-row">
 
-                      <div class="col-md-2 mb-2">
+                      <div class="col-md-2 mb-1">
                         <!-- <label class="mb-0">Fecha</label> -->
                         <mat-form-field class="w-100">
                           <input matInput
@@ -74,10 +83,8 @@
 
                       </div>
 
-                      <div class="col-md-2 mb-2">
-                        <!-- <label class="mb-0">Timbrado</label> -->
+                      <div class="col-md-1 mb-1">
                         <mat-form-field class="w-100">
-                            <!-- <input matInput placeholder="Favorite food" value="Sushi"> -->
                             <input  type="text"
                               matInput
                               class=""
@@ -93,7 +100,8 @@
                         </jqxBarGauge> -->
 
                       </div>
-                      <div class="col-md-2 mb-2">
+
+                      <div class="col-md-2 mb-1">
                         <!-- <label class="mb-0">Condición</label> -->
                         <mat-form-field class="w-100">
                           <mat-select
@@ -108,7 +116,8 @@
                         </mat-form-field>
 
                       </div>
-                      <div class="col-md-1 mb-2" *ngIf="factura.condicion=='plazo'">
+
+                      <div class="col-md-1 mb-1" *ngIf="factura.condicion=='plazo'">
                         <!-- <label class="mb-0">Cuotas</label> -->
                         <mat-form-field class="w-100">
                             <!-- <input matInput placeholder="Favorite food" value="Sushi"> -->
@@ -122,7 +131,8 @@
                         </mat-form-field>
 
                       </div>
-                      <div class="col-md-2 mb-2">
+
+                      <div class="col-md-1 mb-1">
                         <mat-form-field class="w-100">
                           <mat-select
                             placeholder="Moneda"
@@ -138,18 +148,22 @@
                     </div>
 
                     <div class="form-row">
-
-                      <div class="col-md-2 mb-3">
+                      <div class="col-md-2 mb-1">
                         <div class="form-row">
                           <div class="col-md-8 pr-2">
                             <mat-form-field class="w-100">
                               <input  type="text"
                                 matInput
                                 class=""
+                                #ruc="ngModel"
                                 placeholder="RUC"
                                 name="ruc"
                                 [(ngModel)]="factura.ruc"
+                                required
                               >
+                              <mat-error *ngIf="ruc.hasError('required')">
+                                  RUC es <strong>requerido</strong>
+                              </mat-error>
                             </mat-form-field>
                           </div>
 
@@ -170,7 +184,7 @@
 
                       </div>
 
-                      <div class="col-md-5 mb-3">
+                      <div class="col-md-5 mb-1">
                         <mat-form-field class="w-100">
                             <!-- <input matInput placeholder="Favorite food" value="Sushi"> -->
                             <input  type="text"
@@ -178,11 +192,17 @@
                               class=""
                               placeholder="Cliente"
                               name="cliente"
+                              #cliente="ngModel"
                               [(ngModel)]="factura.cliente"
+                              required
                             >
+                            <mat-error *ngIf="cliente.hasError('required')">
+                                El cliente no puede quedar vacío!
+                            </mat-error>
                         </mat-form-field>
                       </div>
-                      <div class="col-md-5 mb-3">
+
+                      <div class="col-md-5 mb-1">
                         <mat-form-field class="w-100">
                             <!-- <input matInput placeholder="Favorite food" value="Sushi"> -->
                             <input  type="text"
@@ -194,23 +214,123 @@
                             >
                         </mat-form-field>
                       </div>
-
                     </div>
 
-                    <div class="form-row">
 
-                      <div class="col-md-2 mb-2 px-1">
-                        <label class="mb-0">Descuento</label>
-                            <!-- <input matInput placeholder="Favorite food" value="Sushi"> -->
-                        <input
-                        class="form-control form-control-sm numerico text-right"
-                        id="descuento"
-                        name="descuento"
-                        [(ngModel)]="factura.descuento"
-                        >
+                    <!-- Detalle -->
+                    <div class="card">
+                      <!-- <div class="card-header">
+                      </div> -->
+                      <div class="card-body">
+                        <h5>Detalle de la Factura</h5>
+                        <div class="form-row">
+                          <div class="col-md-5 mb-2 px-1">
+                            <label class="mb-0">Concepto</label>
+                            <input
+                            class="form-control form-control-sm"
+                            name="concepto"
+                            #concepto
+                            [(ngModel)]="detalle.concepto"
+                            >
+                          </div>
+                          <div class="col mb-2 px-1">
+                            <label class="mb-0">Recibo</label>
+                            <input
+                            class="form-control form-control-sm numerico text-right"
+                            name="recibo"
+                            #recibo
+                            [(ngModel)]="detalle.recibo"
+                            >
+                          </div>
+                          <div class="col mb-2 px-1">
+                            <label class="mb-0">Exentas</label>
+                            <input
+                            class="form-control form-control-sm numerico text-right"
+                            name="exentas"
+                            #exentas
+                            [(ngModel)]="detalle.exentas"
+                            >
+                          </div>
+                          <div class="col mb-2 px-1">
+                            <label class="mb-0">Gravadas 5%</label>
+                            <input
+                            class="form-control form-control-sm numerico text-right"
+                            name="gravadas5"
+                            #gravadas5
+                            [(ngModel)]="detalle.gravadas5"
+                            >
+                          </div>
+                          <div class="col mb-2 px-1">
+                            <label class="mb-0">Gravadas 10%</label>
+                            <input
+                            class="form-control form-control-sm numerico text-right"
+                            name="gravadas10"
+                            #gravadas10
+                            [(ngModel)]="detalle.gravadas10"
+                            >
+                          </div>
+                          <div class="col-md-1 mb-2 px-1 d-flex align-items-end">
+                            <button type="button"
+                                    name="button"
+                                    class="btn btn-success btn-sm"
+                                    (click)="agregarLinea(concepto.value, recibo.value, exentas.value, gravadas5.value, gravadas10.value)"
+                                    >
+                              <i class="fa fa-plus" aria-hidden="true"></i>
+                            </button>
+                          </div>
+
+
+
+                        </div>
+
+                        <!-- Tabla Detalle -->
+                        <div class="row">
+                          <div class="col-md-12">
+                            <table class="table table-bordered table-hover table-sm">
+                              <thead>
+                                <tr>
+                                  <th class="text-center" style="width:55%">Cuenta</th>
+                                  <th class="text-center" style="width:10%">Recibo</th>
+                                  <th class="text-center" style="width:10%">Exentas</th>
+                                  <th class="text-center" style="width:10%">5%</th>
+                                  <th class="text-center" style="width:10%">10%</th>
+                                  <th class="text-center" style="width:5%"><i class="fa fa-trash" aria-hidden="true"></i></th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr *ngFor="let linea of detalleFactura">
+                                  <td>{{linea.concepto}}</td>
+                                  <td class="text-right">{{linea.recibo | number}}</td>
+                                  <td class="text-right">{{linea.exentas | number}}</td>
+                                  <td class="text-right">{{linea.gravadas5 | number}}</td>
+                                  <td class="text-right">{{linea.gravadas10 | number}}</td>
+                                  <td class="text-center"><i class="fa fa-times text-danger" aria-hidden="true"></i></td>
+                                </tr>
+                                <tr class="subtotal">
+                                  <td>Subtotales</td>
+                                  <td class="text-right">{{subtotales.strecibo | number}}</td>
+                                  <td class="text-right">{{subtotales.stexentas | number}}</td>
+                                  <td class="text-right">{{subtotales.stgrav5 | number}}</td>
+                                  <td class="text-right">{{subtotales.stgrav10 | number}}</td>
+                                  <td class="text-center"></td>
+                                </tr>
+                                <tr class="subtotal">
+                                  <td colspan="2">Total Factura</td>
+                                  <td colspan="3" class="text-right">{{subtotales.stexentas + subtotales.stgrav5 + subtotales.stgrav10 | number}}</td>
+                                  <td class="text-center"></td>
+                                </tr>
+                                <tr class="total">
+                                  <td colspan="2">Total a Cobrar</td>
+                                  <td colspan="3" class="text-right">{{subtotales.stexentas + subtotales.stgrav5 + subtotales.stgrav10 + subtotales.strecibo | number}}</td>
+                                  <td class="text-center"></td>
+                                </tr>
+                              </tbody>
+                            </table>
+                          </div>
+
+                        </div>
+
                       </div>
-
-
                     </div>
 
                 </div>
@@ -230,8 +350,8 @@
                   <i class="fa fa-reply" aria-hidden="true"></i>
                   Volver
                 </button>
-
-                <button [disabled]="!forma.valid"
+ <!-- [disabled]="!forma.valid" -->
+                <button
                   type="submit"
                   class="btn btn-primary pull-right">
                   <i class="fa fa-save" aria-hidden="true"></i>
