--- a/src/app/components/factura/factura-nuevo/factura-nuevo.component.html
+++ b/src/app/components/factura/factura-nuevo/factura-nuevo.component.html
@@ -1,7 +1,7 @@
 <div class="animated fadeIn">
 
   <!-- Content Header (Page header) -->
-  <form (ngSubmit)="guardar(forma)" #forma="ngForm" novalidate="">
+  <form (ngSubmit)="nuevaFactura()" #forma="ngForm" novalidate="">
   <section class="content-header">
     <h1>Nueva Factura</h1>
   </section>
@@ -17,8 +17,8 @@
         <!-- Formulario Carga Datos -->
 
           <div class="box box-primary">
-          <div class="box-header with-border">
-            <!-- <h3 class="box-title">Ingresar Datos</h3> -->
+          <!-- <div class="box-header with-border">
+
 
             <div class="col-md-4 m-b-0 px-1 pull-left">
               <div class="row d-flex align-items-center">
@@ -40,8 +40,7 @@
                   name="npe"
                   [(ngModel)]="factura.npe"
                   >
-                  <!-- <div class="form-control  is-invalid"> -->
-                  <!--  -->
+
                     <input  type="text"
                     class="form-control w-50 text-center"
                     #ncomp="ngModel"
@@ -52,12 +51,12 @@
                     [(ngModel)]="factura.ncomp"
                     required
                     >
-                  <!-- </div> -->
+
                 </div>
               </div>
             </div>
 
-          </div>
+          </div> -->
           <!-- /.box-header -->
           <div class="box-body">
             <div class="row">
@@ -66,16 +65,51 @@
 
                     <div class="form-row">
 
+                      <div class="col-md-4 pt-2 pull-left">
+                        <div class="col d-flex p-1 align-items-center">
+                          <div class="col mb-0 px-0">
+                            <h5>Nº Factura</h5>
+                          </div>
+                          <div class="col-md-8 px-0 input-group">
+                            <input  type="text"
+                            class="form-control w-25 text-center"
+                            placeholder="Suc"
+                            name="nsuc"
+                            [(ngModel)]="factura.nsuc"
+                            minlength="3"
+                            maxlength="3"
+                            >
+                            <input  type="text"
+                            class="form-control w-25 text-center"
+                            placeholder="PE"
+                            name="npe"
+                            [(ngModel)]="factura.npe"
+                            >
+                            <!-- <div class="form-control  is-invalid"> -->
+                            <!--  -->
+                              <input  type="text"
+                              class="form-control w-50 text-center"
+                              #ncomp="ngModel"
+                              [ngClass]="{ 'is-invalid': ncomp.errors?.required && ( ncomp.touched || forma.submitted )}"
+                              placeholder="Factura"
+                              name="ncomp"
+
+                              [(ngModel)]="factura.ncomp"
+                              required
+                              >
+                            <!-- </div> -->
+                          </div>
+                        </div>
+                      </div>
+
                       <div class="col-md-2 mb-1">
-                        <!-- <label class="mb-0">Fecha</label> -->
                         <mat-form-field class="w-100">
                           <input matInput
                                 [matDatepicker]="picker"
                                 class=""
                                 placeholder="Fecha"
                                 name="fecha"
-                                [(ngModel)]="factura.fecha"
-                                (blur)="mostrarFecha()"
+                                [(ngModel)]="factura.fecha"                              
                                 >
                           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                           <mat-datepicker #picker></mat-datepicker>
@@ -83,7 +117,7 @@
 
                       </div>
 
-                      <div class="col-md-1 mb-1">
+                      <div class="col-md-2 mb-1">
                         <mat-form-field class="w-100">
                             <input  type="text"
                               matInput
@@ -229,6 +263,7 @@
                             <input
                             class="form-control form-control-sm"
                             name="concepto"
+                            id="concepto"
                             #concepto
                             [(ngModel)]="detalle.concepto"
                             >
@@ -298,13 +333,16 @@
                                 </tr>
                               </thead>
                               <tbody>
-                                <tr *ngFor="let linea of detalleFactura">
+                                <tr *ngFor="let linea of detalleFactura; let indice = index">
+                                  <td class="text-right" style="display:none;">{{ indice }}</td>
                                   <td>{{linea.concepto}}</td>
                                   <td class="text-right">{{linea.recibo | number}}</td>
                                   <td class="text-right">{{linea.exentas | number}}</td>
                                   <td class="text-right">{{linea.gravadas5 | number}}</td>
                                   <td class="text-right">{{linea.gravadas10 | number}}</td>
-                                  <td class="text-center"><i class="fa fa-times text-danger" aria-hidden="true"></i></td>
+                                  <td class="text-center eliminar" (click)="borrarLinea(indice)">
+                                    <i class="fa fa-times text-danger" aria-hidden="true"></i>
+                                  </td>
                                 </tr>
                                 <tr class="subtotal">
                                   <td>Subtotales</td>
@@ -353,6 +391,7 @@
  <!-- [disabled]="!forma.valid" -->
                 <button
                   type="submit"
+                  [disabled]="!forma.valid"
                   class="btn btn-primary pull-right">
                   <i class="fa fa-save" aria-hidden="true"></i>
                   Guardar
